--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "build": "cd chrome-extension && zip -j chrome-ext-boilerplate.zip index.js manifest.json"
   },
   "devDependencies": {
-    "gulp": "^3.8.7",
-    "gulp-connect": "^2.0.6",
-    "gulp-minify": "^1.0.0",
-    "gulp-webpack": "^0.3.0",
-    "webpack": "^1.4.13",
-    "webpack-stream": "^4.0.0"
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.7.0",
+    "gulp-minify": "^3.1.0",
+    "webpack-stream": "^4.0.0",
+    "webpack": "^4.27.1"
   }
 }
